--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 name: White Paper
 description: >
-    A simple jekyll theme aimed at programmers who like clean interface to write posts
-    and show off some code.
+    description
 about: >
-    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+    about
 
 master_repo: false
-url: "http://vinitkumar.github.io/white-paper"
+url: "https://blog.unko.fun"
 markdown: kramdown
 highlighter: rouge
 
@@ -19,14 +18,14 @@ disqus_shortname:
 
 rtl: false
 owner:
-  name:           whitepaper
-  avatar:         "https://avatars1.githubusercontent.com/u/537678?s=240&v=4"
-  email:          "vinit1414.08@bitmesra.ac.in"
+  name:           unko
+  avatar:         "https://avatars0.githubusercontent.com/u/11971487?s=460&u=256432881ba2af2392cdde58d1ee2db2f5c0bc16&v=4"
+  email:          "840382477@qq.com"
   # Social networking links used in footer. Update and remove as you like.
-  twitter: vinitkme
-  github: https://github.com/vinitkumar
-  stackexchange: https://stackoverflow.com/users/859112/vinit-kumar?tab=profile
-  linkedin: https://www.linkedin.com/in/vinitatlinkedin
+  twitter: 
+  github: https://github.com/AmyF
+  stackexchange: 
+  linkedin: 
   # For Google Authorship https://plus.google.com/authorship
   google_plus:
 
